fixing nav spacing

--- a/client/src/styles/nav.scss
+++ b/client/src/styles/nav.scss
@@ -79,7 +79,7 @@ $width5: calc(#{$unit} * 5);
 
     .nav-icons {
       margin-left: $unit;
-      margin-top: calc(#{$unit} * 2);
+      margin-top: 89px;
       height: $unit;
       width: calc(100% - calc(#{$unit} * 2));
       min-height: $unit;
